--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@ a {
 /* estilização do select */
 @layer components {
   .my-react-select-container .my-react-select__control {
-    @apply bg-white dark:bg-grey-700 border-2 rounded-2xl border-grey-300 dark:border-grey-500 hover:border-blue-400 dark:hover:border-blue-700;
+    @apply bg-white dark:bg-gray-700 border-2 rounded-2xl border-gray-300 dark:border-gray-500 hover:border-blue-400 dark:hover:border-blue-700;
   }
 
   .my-react-select-container .my-react-select__control--is-focused {
@@ -31,16 +31,16 @@ a {
   }
 
   .my-react-select-container .my-react-select__option {
-    @apply text-grey-700 dark:text-grey-200 bg-white hover:bg-blue-500 hover:text-white dark:bg-grey-700 dark:hover:bg-grey-800 ;
+    @apply text-gray-700 dark:text-gray-200 bg-white hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:hover:bg-gray-800 ;
   }
 
   .my-react-select-container .my-react-select__indicator-separator {
-    @apply bg-grey-400;
+    @apply bg-gray-400;
   }
 
   .my-react-select-container .my-react-select__input-container,
   .my-react-select-container .my-react-select__placeholder,
   .my-react-select-container .my-react-select__single-value {
-    @apply text-grey-600 dark:text-grey-200;
+    @apply text-gray-600 dark:text-gray-200;
   }
 }
