--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,8 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -18,7 +18,6 @@ a {
 * {
   box-sizing: border-box;
 }
-
 
 /* estilização do select */
 @layer components {
@@ -31,7 +30,7 @@ a {
   }
 
   .my-react-select-container .my-react-select__option {
-    @apply text-gray-700 dark:text-gray-200 bg-white hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:hover:bg-gray-800 ;
+    @apply text-gray-700 dark:text-gray-200 bg-white hover:bg-blue-500 hover:text-white dark:bg-gray-700 dark:hover:bg-gray-800;
   }
 
   .my-react-select-container .my-react-select__indicator-separator {
